--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="right-panel">
           <div class="coordinate-controls">
             <h3>Coordinate Offsets</h3>
+            <h4>By default player positioned in top left</h4>
             <div class="offset-control">
               <label for="x-offset">X Offset:</label>
               <input type="number" id="x-offset" value="0">
