--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="container">
     <header>
       <h1>Command Generator</h1>
+      <p class="preview-text">This app helps you generate commands effortlessly. Follow the instructions below to get started. for additional commands you canbdhfhhudninid</p>
     </header>
 
     <main>
