--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <div class="container">
     <header>
       <h1>Command Generator</h1>
-      <p class="preview-text">This app helps you generate commands effortlessly. Follow the instructions below to get started. for additional commands you canbdhfhhudninid</p>
+      <details>
+        <summary>Info</summary>
+        <p>This app allows you to create commands by selecting colors and adding custom commands. You can preview and save your commands in a .mcfunction file.</p>
+      </details>
     </header>
 
     <main>
