--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <h1>Minecraft Advanced Hitbox Function Generator</h1>
       <details>
         <summary>Info</summary>
-        <p>Create powerful Minecraft functions with precise hitboxes using our intuitive tool. Easily draw custom hitboxes and assign multi-line commands to different colors for better organization. Take full control over positioning with player-relative offsets and even integrate dynamic calculations using {math:equation} in your commands. Save your work, preview hitboxes in real time, and generate optimized function files effortlessly. Whether you're designing combat skills, spell effects, or complex command-based mechanics, our tool streamlines the process for you.
-</p>
+        <p>Create powerful Minecraft functions with precise hitboxes using our intuitive tool. Easily draw custom hitboxes and assign multi-line commands to different colors for better organization. Take full control over positioning with player-relative offsets and even integrate dynamic calculations using {math:} in your commands. Save your work, preview hitboxes in real time, and generate optimized function files effortlessly. Whether you're designing combat skills, spell effects, or complex command-based mechanics, our tool streamlines the process for you.</p>
       </details>
     </header>
 
