--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <title>Command Generator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -98,6 +98,7 @@
             </div>
             <div class="form-actions">
               <button type="submit" class="btn">Add</button>
+              <button id="templates" class="btn">Templates</button>
             </div>
           </form>
         </div>
