--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="form-group">
               <label for="command-color">Color (hex):</label>
-              <input type="text" id="command-color" value="#ff0000" required>
+              <input type="text" id="command-color" value="#" required>
               <div class="color-preview" id="color-preview"></div>
             </div>
             <div class="form-group">
@@ -98,7 +98,7 @@
             </div>
             <div class="form-actions">
               <button type="submit" class="btn">Add</button>
-              <button id="templates" class="btn">Templates</button>
+              <button id="templates-btn" class="btn">Templates</button>
             </div>
           </form>
         </div>
