--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="form-group">
               <label for="command-template">Command Template:</label>
-              <textarea id="command-template" rows="4" required>execute positioned {x} {y} {z} run say Hello</textarea>
+              <textarea id="command-template" rows="4" required></textarea>
               <div class="template-help">
                 <p>Use {x}, {y}, {z} as placeholders for coordinates</p>
               </div>
