--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Easily create custom Minecraft Bedrock function files with our online generator.">
+  <meta name="keywords" content="Minecraft, Bedrock, Function Generator, Commands, Scripting">
+  <meta name="author" content="vertX">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Function Generator">
+  <meta property="og:description" content="Easily create and download custom function files for Minecraft Bedrock Edition.">
+  <meta property="og:url" content="https://vertx-dev.github.io/">
+  <meta property="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Command Generator</title>
+  <title>Function Generator</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
