--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
           <span class="switch-text">DRAGGABLE</span>
         </label>
       </div>
+      <div>
+        <label class="move-canvas">
+          <input type="checkbox" id="move-grid" checked="checked">
+          <span class="slider"></span>
+          <span class="switch-text">MOVE</span>
+        </label>
+      </div>
       <div class="app-container">
         <!-- Left Panel: Control Panel for Modes and Commands -->
         <div class="left-panel">
