--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
           <span class="switch-text">MOVE</span>
         </label>
       </div>
+      <div>
+        <label class="test-mode">
+          <input type="checkbox" id="debug-auto">
+          <span class="slider"></span>
+          <span class="switch-text">Auto fill</span>
+        </label>
+      </div>
       <div class="app-container">
         <!-- Left Panel: Control Panel for Modes and Commands -->
         <div class="left-panel">
@@ -196,7 +203,7 @@
       </div>
     </div>
     
-    <!-- Templates Modal: Lists predefined command templates categorized by type -->
+   <!-- Templates Modal: Lists predefined command templates categorized by type -->
     <div id="templates-modal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
@@ -347,6 +354,8 @@
       </div>
     </div>
 
+
+    
     <!-- Alert Modal: Provides notifications or alerts to the user -->
     <div id="alert-modal" class="modal">
       <div class="modal-content">
