--- a/loot-table-generator.html
+++ b/loot-table-generator.html
@@ -232,8 +232,8 @@
                         "bastion_remnant": `§6Bastion Treasure by vertX-dev §8- §klt{${timestamp}}`,
                         "nether_fortress": `§cNether Secret by vertX-dev §8- §klt{${timestamp}}`,
                         "end_city": `§5End Discovery by vertX-dev §8- §klt{${timestamp}}`,
-                        "ruined_portal": `§klt{${ruined_portal}}`,
-                        "underwater_ruin": `§klt{${ocean_ruin}}`
+                        "ruined_portal": `§klt{ruined_portal}`,
+                        "underwater_ruin": `§klt{ocean_ruin}`
                     };
                     
                     // Initialize UI elements
