--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 <p>Generate custom loot tables for your Minecraft Bedrock Edition maps and add-ons with an easy-to-use interface.</p>
                 <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
             </div>
+            <div class="tool-card">
+                <h2>Loot Table Generator</h2>
+                <p>Generate custom loot tables for your Minecraft Bedrock Edition maps and add-ons with an easy-to-use interface.</p>
+                <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
+            </div>
         </div>
     </div>
 </body>
