--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                 <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
             </div>
             <div class="tool-card">
-                <h2>Loot Table Generator</h2>
-                <p>Generate custom loot tables for your Minecraft Bedrock Edition maps and add-ons with an easy-to-use interface.</p>
-                <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
+                <h2>Minecraft Assets</h2>
+                <p>Access a collection of useful Minecraft Bedrock Edition assets, from ready-to-use resources to customizable tools, all designed to help you create, enhance, and personalize your maps and add-ons with ease.</p>
+                <a href="minecraft-assets-library.html" class="button">Open Assets Library</a>
             </div>
         </div>
     </div>
