--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                 <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
             </div>
             <div class="tool-card">
-                <h2>Minecraft Assets</h2>
-                <p>Access a collection of useful Minecraft Bedrock Edition assets, from ready-to-use resources to customizable tools, all designed to help you create, enhance, and personalize your maps and add-ons with ease.</p>
-                <a href="minecraft-assets-library.html" class="button">Open Assets Library</a>
+                <h2>MSIF Guide</h2>
+                <p>MSIFvAPI V5 - Advanced Minecraft Skills SystemTransform your Minecraft experience with dynamic item and armor skills! V5 features enhanced offhand support, individual armor abilities, complete set bonuses, and intuitive JSON UI controls.</p>
+                <a href="guide.html" class="button">Open Assets Library</a>
             </div>
         </div>
     </div>
