--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+https://vertx-dev.github.io/guide.html<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -86,7 +86,7 @@
             <div class="tool-card">
                 <h2>MSIF Guide</h2>
                 <p>MSIFvAPI V5 - Advanced Minecraft Skills SystemTransform your Minecraft experience with dynamic item and armor skills! V5 features enhanced offhand support, individual armor abilities, complete set bonuses, and intuitive JSON UI controls.</p>
-                <a href="guide.html" class="button">Open Assets Library</a>
+                <a href="guide.html" class="button">Open Guide</a>
             </div>
         </div>
     </div>
