--- a/guide.html
+++ b/guide.html
@@ -279,7 +279,7 @@
             </div>
             <h1>MSIFvAPI V5</h1>
             <p class="subtitle">Multiple Skill Items Function</p>
-            <a href="https://www.mediafire.com/file/uqi3hy4cp3q8h51/MSIFvAPI_V5.mcaddon/file" class="download-link">[DOWNLOAD]</a>
+            <a href="https://direct-link.net/1355232/e4MuOn9S0DO1" class="download-link">[DOWNLOAD]</a>
         </div>
 
         <div class="content">
