--- a/guide.html
+++ b/guide.html
@@ -279,7 +279,7 @@
             </div>
             <h1>MSIFvAPI V5</h1>
             <p class="subtitle">Multiple Skill Items Function</p>
-            <a href="https://direct-link.net/1355232/ZCm4kX66oPaR" class="download-link">[DOWNLOAD]</a>
+            <a href="https://www.curseforge.com/minecraft-bedrock/addons/msifvapi-v5" class="download-link">[DOWNLOAD]</a>
         </div>
 
         <div class="content">
