--- a/index.html
+++ b/index.html
@@ -1,94 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Collection of Minecraft Bedrock Edition tools including Function Generator and Loot Table Generator">
-    <meta name="keywords" content="Minecraft, Bedrock, Function Generator, Loot Table Generator, Tools">
-    <meta name="author" content="vertX">
-    <title>Minecraft Bedrock Tools - vertX</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-        }
-        .tools-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
-        }
-        .tool-card {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 20px;
-            text-align: center;
-            transition: transform 0.2s;
-        }
-        .tool-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-        .tool-card h2 {
-            margin-top: 0;
-            color: #3498db;
-        }
-        .tool-card p {
-            color: #666;
-            margin-bottom: 20px;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.2s;
-        }
-        .button:hover {
-            background-color: #2980b9;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Minecraft Bedrock Tools</h1>
-        
-        <div class="tools-grid">
-            <div class="tool-card">
-                <h2>Function Generator</h2>
-                <p>Create powerful Minecraft functions by drawing precise hitboxes and assigning commands with color-coded organization.</p>
-                <a href="function-generator.html" class="button">Open Function Generator</a>
-            </div>
-            
-            <div class="tool-card">
-                <h2>Loot Table Generator</h2>
-                <p>Generate custom loot tables for your Minecraft Bedrock Edition maps and add-ons with an easy-to-use interface.</p>
-                <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
-            </div>
-            <div class="tool-card">
-                <h2>MSIF Guide</h2>
-                <p>MSIFvAPI V5 - Advanced Minecraft Skills SystemTransform your Minecraft experience with dynamic item and armor skills! V5 features enhanced offhand support, individual armor abilities, complete set bonuses, and intuitive JSON UI controls.</p>
-                <a href="guide.html" class="button">Open Guide</a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Collection of Minecraft Bedrock Edition tools including Function Generator and Loot Table Generator" />
+        <meta name="keywords" content="Minecraft, Bedrock, Function Generator, Loot Table Generator, Tools" />
+        <meta name="author" content="vertX" />
+        <title>Minecraft Bedrock Tools - vertX</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 20px;
+                background-color: #f0f0f0;
+                color: #333;
+            }
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                background-color: white;
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            }
+            h1 {
+                text-align: center;
+                color: #2c3e50;
+            }
+            .tools-grid {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 20px;
+                margin-top: 30px;
+            }
+            .tool-card {
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                padding: 20px;
+                text-align: center;
+                transition: transform 0.2s;
+            }
+            .tool-card:hover {
+                transform: translateY(-5px);
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            }
+            .tool-card h2 {
+                margin-top: 0;
+                color: #3498db;
+            }
+            .tool-card p {
+                color: #666;
+                margin-bottom: 20px;
+            }
+            .button {
+                display: inline-block;
+                padding: 10px 20px;
+                background-color: #3498db;
+                color: white;
+                text-decoration: none;
+                border-radius: 5px;
+                transition: background-color 0.2s;
+            }
+            .button:hover {
+                background-color: #2980b9;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <h1>Minecraft Bedrock Tools</h1>
+
+            <div class="tools-grid">
+                <div class="tool-card">
+                    <h2>Function Generator</h2>
+                    <p>Create powerful Minecraft functions by drawing precise hitboxes and assigning commands with color-coded organization.</p>
+                    <a href="function-generator.html" class="button">Open Function Generator</a>
+                </div>
+
+                <div class="tool-card">
+                    <h2>Loot Table Generator</h2>
+                    <p>Generate custom loot tables for your Minecraft Bedrock Edition maps and add-ons with an easy-to-use interface.</p>
+                    <a href="loot-table-generator.html" class="button">Open Loot Table Generator</a>
+                </div>
+                <div class="tool-card">
+                    <h2>Calculator</h2>
+                    <p></p>
+                    <a href="math-calculator/calculator.html" class="button">Open Guide</a>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
