--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </div>
                 <div class="tool-card">
                     <h2>Calculator</h2>
-                    <p></p>
-                    <a href="math-calculator/calculator.html" class="button">Open Guide</a>
+                    <p>Calculator for math statistic</p>
+                    <a href="math-calculator/calculator.html" class="button">Open Calculator</a>
                 </div>
             </div>
         </div>
